kubernetes/apps/keycloak/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak

  template:
    metadata:
      labels:
        app: keycloak

    spec:
      containers:
        - name: keycloak

          image: quay.io/keycloak/keycloak:25.0.6

          args:
            - start-dev
            - --hostname=http://192.168.56.21:30080
            - --hostname-strict=false
            - --http-enabled=true

          ports:
            - containerPort: 8080

          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"

            limits:
              memory: "1Gi"
              cpu: "1000m"

---
apiVersion: v1
kind: Service

metadata:
  name: keycloak
  namespace: keycloak

spec:
  type: NodePort

  selector:
    app: keycloak

  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
